assignment1/main/d96/parser/.antlr/D96Parser.py
# Generated from d:\E-Learning HK 212\PPL\ASSIGNMENT\Assignment 1\assignment1\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'$'", "'..'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Program'", "'main'", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Array'", "'In'", "'Int'", "'Float'", "'Boolean'", 
                     "'String'", "'Return'", "'Class'", "'Null'", "'Val'", 
                     "'Var'", "'Self'", "'Constructor'", "'Destructor'", 
                     "'New'", "'By'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'!='", "'='", "'>'", 
                     "'<'", "'>='", "'<='", "'==.'", "'+.'", "'::'", "'('", 
                     "')'", "'['", "']'", "'{'", "'}'", "';'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "Class_word", "Return_word", "BLOCKCOMMENT", "INTLIT", 
                      "FLOATLIT", "BOOLEANLIT", "STRINGLIT", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "Array_word", "ID", "Program", "Main", 
                      "Break", "Continue", "If", "Elseif", "Else", "Foreach", 
                      "BooleanTrue", "BooleanFalse", "Array", "In", "Int", 
                      "Float", "Boolean", "String", "Return", "Class", "Null", 
                      "Val", "Var", "Self", "Constructor", "Destructor", 
                      "KEYWORD_New", "By", "ADD_OP", "SUB_OP", "MUL_OP", 
                      "DIV_OP", "MOD_OP", "NOT_OP", "AND_OP", "OR_OP", "EQUAL_OP", 
                      "DIFF_OP", "ASSIGN_OP", "GREATER_OP", "LESSER_OP", 
                      "GREATER_EQUAL_OP", "LESSER_EQUAL_OP", "STRING_COMP_OP", 
                      "STRING_CONCAT_OP", "MEMBER_ACCESS_OUT", "LP", "RP", 
                      "LSB", "RSB", "LB", "RB", "SEMI", "DOT", "COMA", "WS", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_many_class_decl = 1
    RULE_class_decl_list = 2
    RULE_class_decl = 3
    RULE_member_lists = 4
    RULE_member_list_tail = 5
    RULE_member = 6
    RULE_attributes = 7
    RULE_attribute_list = 8
    RULE_attribute_list_tail = 9
    RULE_attribute_name = 10
    RULE_types = 11
    RULE_primitive_Type = 12
    RULE_array_Type = 13
    RULE_element_type = 14
    RULE_array_size = 15
    RULE_class_type = 16
    RULE_methods = 17
    RULE_param = 18
    RULE_paramlist = 19
    RULE_paramlist_tail = 20
    RULE_param_decl = 21
    RULE_idlist = 22
    RULE_idlist_tail = 23
    RULE_expr_list = 24
    RULE_expr_list_tail = 25
    RULE_expr = 26
    RULE_class_expr = 27
    RULE_member_access_out = 28
    RULE_member_access_in = 29
    RULE_self_word = 30
    RULE_index_expr = 31
    RULE_index_operators = 32
    RULE_lower_expr = 33
    RULE_math_expr = 34
    RULE_mod_expr = 35
    RULE_logical_not_expr = 36
    RULE_logical_expr = 37
    RULE_relational_expr = 38
    RULE_relational_expr_1 = 39
    RULE_relational_expr_2 = 40
    RULE_string_expr = 41
    RULE_block_stmt = 42
    RULE_block_stmt_list = 43
    RULE_block_stmt_list_tail = 44
    RULE_stmt = 45
    RULE_stmt_list = 46
    RULE_var_cons_decl = 47
    RULE_var_cons_list = 48
    RULE_var_cons_list_tail = 49
    RULE_var_cons_name = 50
    RULE_asm = 51
    RULE_if_stmt = 52
    RULE_matchStmt = 53
    RULE_unmatchStmt = 54
    RULE_elseif_list = 55
    RULE_elseif_list_tail = 56
    RULE_elseif_stmt = 57
    RULE_loop_stmt = 58
    RULE_call = 59
    RULE_return_stmt = 60
    RULE_multi_ArrayLIT = 61
    RULE_array_list = 62
    RULE_array_list_tail = 63
    RULE_arrayLIT = 64
    RULE_elements = 65
    RULE_ele_int_list = 66
    RULE_ele_int_list_tail = 67
    RULE_ele_float_list = 68
    RULE_ele_float_list_tail = 69
    RULE_ele_bool_list = 70
    RULE_ele_bool_list_tail = 71
    RULE_ele_str_list = 72
    RULE_ele_str_list_tail = 73

    ruleNames =  [ "program", "many_class_decl", "class_decl_list", "class_decl", 
                   "member_lists", "member_list_tail", "member", "attributes", 
                   "attribute_list", "attribute_list_tail", "attribute_name", 
                   "types", "primitive_Type", "array_Type", "element_type", 
                   "array_size", "class_type", "methods", "param", "paramlist", 
                   "paramlist_tail", "param_decl", "idlist", "idlist_tail", 
                   "expr_list", "expr_list_tail", "expr", "class_expr", 
                   "member_access_out", "member_access_in", "self_word", 
                   "index_expr", "index_operators", "lower_expr", "math_expr", 
                   "mod_expr", "logical_not_expr", "logical_expr", "relational_expr", 
                   "relational_expr_1", "relational_expr_2", "string_expr", 
                   "block_stmt", "block_stmt_list", "block_stmt_list_tail", 
                   "stmt", "stmt_list", "var_cons_decl", "var_cons_list", 
                   "var_cons_list_tail", "var_cons_name", "asm", "if_stmt", 
                   "matchStmt", "unmatchStmt", "elseif_list", "elseif_list_tail", 
                   "elseif_stmt", "loop_stmt", "call", "return_stmt", "multi_ArrayLIT", 
                   "array_list", "array_list_tail", "arrayLIT", "elements", 
                   "ele_int_list", "ele_int_list_tail", "ele_float_list", 
                   "ele_float_list_tail", "ele_bool_list", "ele_bool_list_tail", 
                   "ele_str_list", "ele_str_list_tail" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    Class_word=4
    Return_word=5
    BLOCKCOMMENT=6
    INTLIT=7
    FLOATLIT=8
    BOOLEANLIT=9
    STRINGLIT=10
    UNCLOSE_STRING=11
    ILLEGAL_ESCAPE=12
    Array_word=13
    ID=14
    Program=15
    Main=16
    Break=17
    Continue=18
    If=19
    Elseif=20
    Else=21
    Foreach=22
    BooleanTrue=23
    BooleanFalse=24
    Array=25
    In=26
    Int=27
    Float=28
    Boolean=29
    String=30
    Return=31
    Class=32
    Null=33
    Val=34
    Var=35
    Self=36
    Constructor=37
    Destructor=38
    KEYWORD_New=39
    By=40
    ADD_OP=41
    SUB_OP=42
    MUL_OP=43
    DIV_OP=44
    MOD_OP=45
    NOT_OP=46
    AND_OP=47
    OR_OP=48
    EQUAL_OP=49
    DIFF_OP=50
    ASSIGN_OP=51
    GREATER_OP=52
    LESSER_OP=53
    GREATER_EQUAL_OP=54
    LESSER_EQUAL_OP=55
    STRING_COMP_OP=56
    STRING_CONCAT_OP=57
    MEMBER_ACCESS_OUT=58
    LP=59
    RP=60
    LSB=61
    RSB=62
    LB=63
    RB=64
    SEMI=65
    DOT=66
    COMA=67
    WS=68
    ERROR_CHAR=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_class_decl(self):
            return self.getTypedRuleContext(D96Parser.Many_class_declContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.many_class_decl()
            self.state = 149
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_class_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decl(self):
            return self.getTypedRuleContext(D96Parser.Class_declContext,0)


        def class_decl_list(self):
            return self.getTypedRuleContext(D96Parser.Class_decl_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_many_class_decl




    def many_class_decl(self):

        localctx = D96Parser.Many_class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_class_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.class_decl()
            self.state = 152
            self.class_decl_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_decl_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_decl(self):
            return self.getTypedRuleContext(D96Parser.Class_declContext,0)


        def class_decl_list(self):
            return self.getTypedRuleContext(D96Parser.Class_decl_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_class_decl_list




    def class_decl_list(self):

        localctx = D96Parser.Class_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_decl_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.Class_word:
                self.state = 154
                self.class_decl()
                self.state = 155
                self.class_decl_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Class_word(self):
            return self.getToken(D96Parser.Class_word, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def member_lists(self):
            return self.getTypedRuleContext(D96Parser.Member_listsContext,0)


        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def Program(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.Program)
            else:
                return self.getToken(D96Parser.Program, i)

        def getRuleIndex(self):
            return D96Parser.RULE_class_decl




    def class_decl(self):

        localctx = D96Parser.Class_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_class_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(D96Parser.Class_word)
            self.state = 160
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.Program):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.T__0:
                self.state = 161
                self.match(D96Parser.T__0)
                self.state = 162
                _la = self._input.LA(1)
                if not(_la==D96Parser.ID or _la==D96Parser.Program):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 165
            self.match(D96Parser.LB)
            self.state = 166
            self.member_lists()
            self.state = 167
            self.match(D96Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_listsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def member_list_tail(self):
            return self.getTypedRuleContext(D96Parser.Member_list_tailContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member_lists




    def member_lists(self):

        localctx = D96Parser.Member_listsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_member_lists)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.T__1) | (1 << D96Parser.ID) | (1 << D96Parser.Main) | (1 << D96Parser.Val) | (1 << D96Parser.Var) | (1 << D96Parser.Constructor) | (1 << D96Parser.Destructor))) != 0):
                self.state = 169
                self.member()
                self.state = 170
                self.member_list_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Member_list_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def member_list_tail(self):
            return self.getTypedRuleContext(D96Parser.Member_list_tailContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member_list_tail




    def member_list_tail(self):

        localctx = D96Parser.Member_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_member_list_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.T__1) | (1 << D96Parser.ID) | (1 << D96Parser.Main) | (1 << D96Parser.Val) | (1 << D96Parser.Var) | (1 << D96Parser.Constructor) | (1 << D96Parser.Destructor))) != 0):
                self.state = 174
                self.member()
                self.state = 175
                self.member_list_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributes(self):
            return self.getTypedRuleContext(D96Parser.AttributesContext,0)


        def methods(self):
            return self.getTypedRuleContext(D96Parser.MethodsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_member)
        try:
            self.state = 181
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.Val, D96Parser.Var]:
                self.enterOuterAlt(localctx, 1)
                self.state = 179
                self.attributes()
                pass
            elif token in [D96Parser.T__1, D96Parser.ID, D96Parser.Main, D96Parser.Constructor, D96Parser.Destructor]:
                self.enterOuterAlt(localctx, 2)
                self.state = 180
                self.methods()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_list(self):
            return self.getTypedRuleContext(D96Parser.Attribute_listContext,0)


        def types(self):
            return self.getTypedRuleContext(D96Parser.TypesContext,0)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def Val(self):
            return self.getToken(D96Parser.Val, 0)

        def Var(self):
            return self.getToken(D96Parser.Var, 0)

        def ASSIGN_OP(self):
            return self.getToken(D96Parser.ASSIGN_OP, 0)

        def expr_list(self):
            return self.getTypedRuleContext(D96Parser.Expr_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attributes




    def attributes(self):

        localctx = D96Parser.AttributesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attributes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            _la = self._input.LA(1)
            if not(_la==D96Parser.Val or _la==D96Parser.Var):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 184
            self.attribute_list()
            self.state = 185
            self.match(D96Parser.T__0)
            self.state = 186
            self.types()
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ASSIGN_OP:
                self.state = 187
                self.match(D96Parser.ASSIGN_OP)
                self.state = 188
                self.expr_list()


            self.state = 191
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_name(self):
            return self.getTypedRuleContext(D96Parser.Attribute_nameContext,0)


        def attribute_list_tail(self):
            return self.getTypedRuleContext(D96Parser.Attribute_list_tailContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_list




    def attribute_list(self):

        localctx = D96Parser.Attribute_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_attribute_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.attribute_name()
            self.state = 194
            self.attribute_list_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_list_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute_name(self):
            return self.getTypedRuleContext(D96Parser.Attribute_nameContext,0)


        def attribute_list_tail(self):
            return self.getTypedRuleContext(D96Parser.Attribute_list_tailContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute_list_tail




    def attribute_list_tail(self):

        localctx = D96Parser.Attribute_list_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_attribute_list_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 199
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.T__1 or _la==D96Parser.ID:
                self.state = 196
                self.attribute_name()
                self.state = 197
                self.attribute_list_tail()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attribute_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_attribute_name




    def attribute_name(self):

        localctx = D96Parser.Attribute_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_attribute_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 202
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.T__1:
                self.state = 201
                self.match(D96Parser.T__1)


            self.state = 204
            self.match(D96Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_Type(self):
            return self.getTypedRuleContext(D96Parser.Primitive_TypeContext,0)


        def array_Type(self):
            return self.getTypedRuleContext(D96Parser.Array_TypeContext,0)


        def class_type(self):
            return self.getTypedRuleContext(D96Parser.Class_typeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_types




    def types(self):

        localctx = D96Parser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_types)
        try:
            self.state = 209
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.Int, D96Parser.Float, D96Parser.Boolean, D96Parser.String]:
                self.enterOuterAlt(localctx, 1)
                self.state = 206
                self.primitive_Type()
                pass
            elif token in [D96Parser.Array]:
                self.enterOuterAlt(localctx, 2)
                self.state = 207
                self.array_Type()
                pass
            elif token in [D96Parser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 208
                self.class_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Primitive_TypeContext(ParserRuleContext):
